# attendance-issuer

./: .editorconfig  .gitignore  Cargo.toml  README.md  build-dummy-rp.sh  build.sh  deploy-issuer.sh  dfx.json  early_adopter_issuer.did  provision
.github/workflows/: playwright.yml  rust.yml
dummy-relying-party/: README.md  index.html  package-lock.json  package.json
dummy-relying-party/src/: main.ts
frontend/: .env.production  .eslintrc.cjs  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend/e2e-tests/: registration.spec.ts  utils.ts
frontend/public/.well-known/: ic-domains
frontend/scripts/: create-env-vars.sh  generate-actor.sh
frontend/src/: env.d.ts
frontend/src/components/: Card.astro  Logos.astro  Success.astro  ToastError.astro  WarningIcon.astro
frontend/src/contents/: index.json
frontend/src/declarations/early_adopter/: early_adopter.did  early_adopter.did.d.ts  early_adopter.did.js  index.d.ts  index.js
frontend/src/layouts/: Layout.astro
frontend/src/pages/: admin.astro  index.astro  registration.astro  retruning.astro  success.astro
frontend/src/utils/: actor.ts  get-event-from-params.ts
src/: main.rs
tests/: issue_credential.rs
